[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/options/OptionsAudio.gd" type="Script" id=1]

[node name="OptionsAudio" type="VBoxContainer"]
margin_right = 394.0
margin_bottom = 521.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 394.0
margin_bottom = 31.0
rect_min_size = Vector2( 0, 30 )
text = "Audio
"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="."]
margin_top = 35.0
margin_right = 394.0
margin_bottom = 39.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 43.0
margin_right = 394.0
margin_bottom = 73.0

[node name="Label" type="Label" parent="HBoxContainer"]
margin_right = 100.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 30 )
text = "General : "
align = 2
valign = 1

[node name="General" type="HSlider" parent="HBoxContainer"]
margin_left = 104.0
margin_right = 394.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
tick_count = 10
ticks_on_borders = true

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_top = 77.0
margin_right = 394.0
margin_bottom = 107.0

[node name="Label" type="Label" parent="HBoxContainer2"]
margin_right = 100.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 30 )
text = "Music : "
align = 2
valign = 1

[node name="Music" type="HSlider" parent="HBoxContainer2"]
margin_left = 104.0
margin_right = 394.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
tick_count = 10
ticks_on_borders = true

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
margin_top = 111.0
margin_right = 394.0
margin_bottom = 141.0

[node name="Label" type="Label" parent="HBoxContainer3"]
margin_right = 100.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 30 )
text = "Effects : "
align = 2
valign = 1

[node name="Effects" type="HSlider" parent="HBoxContainer3"]
margin_left = 104.0
margin_right = 394.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
tick_count = 10
ticks_on_borders = true

[node name="HBoxContainer4" type="HBoxContainer" parent="."]
margin_top = 145.0
margin_right = 394.0
margin_bottom = 175.0

[node name="Label" type="Label" parent="HBoxContainer4"]
margin_right = 100.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 30 )
align = 2
valign = 1

[node name="Mute" type="CheckBox" parent="HBoxContainer4"]
margin_left = 104.0
margin_right = 165.0
margin_bottom = 30.0
text = "Mute"
[connection signal="value_changed" from="HBoxContainer/General" to="." method="_on_General_value_changed"]
[connection signal="value_changed" from="HBoxContainer2/Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="HBoxContainer3/Effects" to="." method="_on_Effects_value_changed"]
[connection signal="toggled" from="HBoxContainer4/Mute" to="." method="_on_Mute_toggled"]
